Z-index fix

--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -5,6 +5,7 @@ header {
   color: white;
   display: flex;
   justify-content: space-around;
+  z-index: 1;
 }
 
 .link {
@@ -13,4 +14,5 @@ header {
   font-size: 1.3em;
   margin-left: 80%;
   position: fixed;
+  z-index: 100;
 }
